[project]
name = "freetype-py-stubs"
version = "0.0.1"
description = "Stubs for freetype-py."
authors = [
    {name = "HivertMoZara", email = "worldmozara@163.com"},
]
license = {text = "MIT"}
dependencies = ["freetype-py>=2,<3", "typing_extensions>=4.6.0,<5"]
requires-python = ">=3.9"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/NCBM/freetype-py-stubs"
Repository = "https://github.com/NCBM/freetype-py-stubs"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.pyright]
pythonVersion = "3.9"
